# car-insurance-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  handlers.py  keyboard.py  main.py  models.py  processors.py  states.py
app/services/: mindee.py  openai.py
app/utils/: file_utils.py
tests/integration/: test_openai_service.py  test_photo_processor.py
tests/unit/: test_models.py  test_utils.py
