[project]
name = "car-insurance-bot"
version = "0.1.0"
description = "Telegram bot for car insurance sales with document OCR and LLM-powered dialogs"
authors = [
    {name = "Daniel",email = "danya2zxc@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "mindee (>=4.24.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
