[tool.poetry]
name = "app" 
version = "0.1.0"
description = "Telegram bot for car insurance sales with document OCR and LLM-powered dialogs"
authors = ["Daniel <danya2zxc@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]



[tool.poetry.dependencies]
python = ">=3.11"
aiogram = { version = ">=3.21.0,<4.0.0", extras = ["redis"] }
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
mindee = ">=4.24.0,<5.0.0"
openai = ">=1.97.1,<2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
watchdog ="6.0.0,<7.0.0"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"





[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "TID"]
ignore = ["E501"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"






[tool.pytest.ini_options]
pythonpath = '.'
env_files = [".test.env"]

addopts = '-s -v --cache-clear'
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
cache_dir = '/tmp'
python_files = 'tests.py test_*.py *_test.py'
python_functions = 'test_* *_test'
filterwarnings = ['ignore::RuntimeWarning', 'ignore::UserWarning', "ignore:'crypt' is deprecated:DeprecationWarning",]
